# term-tac-toe

./: .dockerignore  README.md  go.mod  pyproject.toml  redeploy.sh  requirements.txt  server.go  stella.yml
client/: README.md  __init__.py  client.py  events.py  pyproject.toml  tic_tac_toe.py
server/: app.py  compose.yml  gamelogic.py  pyproject.toml  requirements.txt  tic_tac_toe.py  utils.py
server/database/: database.py
server/models/: crud.py  database.py  dbmodels.py  events.py  requests.py  responses.py
server/templates/: landing.html
src/client/: client.py  pyproject.toml
src/common/: events.py  pyproject.toml  tic_tac_toe.py
src/server/: Caddyfile  Dockerfile  README.md  app.py  compose.yml  conn_manager.py  pyproject.toml  utils.py
src/server/models/: crud.py  database.py  dbmodels.py  requests.py  responses.py
src/server/templates/: landing.html
