[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttt-client"
version = "0.1.0"
description = "Terminal-based Tic-Tac-Toe game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"common",
	"requests>=2.32.5",
	"rich>=14.2.0",
	"websockets>=15.0.1",
]

[project.scripts]
ttt = "client:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
common = { workspace = true }
