[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttt-client"
version = "0.1.2"
description = "Terminal-based Tic-Tac-Toe game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"ttt-common>=0.1.0",
	"requests>=2.32.5",
	"rich>=14.2.0",
	"websockets>=15.0.1",
]

[project.scripts]
ttt = "client:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ttt-common = { workspace = true }
