[project]
name = "common"
version = "0.1.0"
description = "Shared functions and classes for term-tac-toe."
readme = "README.md"
authors = [{ name = "Shravan Asati", email = "dev.shravan@protonmail.com" }]
requires-python = ">=3.11, <4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.force-include]
"." = "common"