[project]
name = "ttt-server"
version = "0.1.0"
description = "a multiplayer tic tac toe game for the terminal"
authors = [{ name = "Shravan Asati", email = "dev.shravan@protonmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "SQLAlchemy>=1,<2",
    "python-dotenv>=1.0.1,<2",
    "schedule>=1.2.1,<2",
    "pymysql>=1.1.1,<2",
    "requests>=2.32.0,<3",
    "cryptography>=46.0.3",
    "common",
]

[tool.uv]
package = false

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
